# serializer version: 1
# name: test_sensor[amax_3000][sensor.area1_faulting_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.area1_faulting_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Faulting points',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'faulting_points',
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_area_1_faulting_points',
    'unit_of_measurement': 'points',
  })
# ---
# name: test_sensor[amax_3000][sensor.area1_faulting_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Area1 Faulting points',
      'unit_of_measurement': 'points',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.area1_faulting_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor[b5512][sensor.area1_faulting_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.area1_faulting_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Faulting points',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'faulting_points',
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_area_1_faulting_points',
    'unit_of_measurement': 'points',
  })
# ---
# name: test_sensor[b5512][sensor.area1_faulting_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Area1 Faulting points',
      'unit_of_measurement': 'points',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.area1_faulting_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor[solution_3000][sensor.area1_faulting_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.area1_faulting_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Faulting points',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'faulting_points',
    'unique_id': '1234567890_area_1_faulting_points',
    'unit_of_measurement': 'points',
  })
# ---
# name: test_sensor[solution_3000][sensor.area1_faulting_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Area1 Faulting points',
      'unit_of_measurement': 'points',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.area1_faulting_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
